# cloning-expression-vector-design

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODING_AGENDA.md  Cloning_Expression_Vector_Design_White_Paper.md  Cloning_KB_v2_Audit_Report.md  Cloning_and_Expression_Vector_Design_Knowledge_Base_v1_0.md  Cloning_and_Expression_Vector_Design_Knowledge_Base_v2_0.md  Dockerfile  INSTALL.md  IP_POLICY.md  LICENSE  README.md  REQUIREMENTS.md  ROADMAP.md  TASK_BOARD.md  THIRD_PARTY_LICENSES.md  mkdocs.yml  pyproject.toml
LICENSES/: THIRD_PARTY_NOTICES.md
audit report/: ARCHITECTURE_Audit_Report.md  ARCHITECTURE_Audit_Response.md  ARCHITECTURE_Second_Audit_Report_v1_2.md  ARCHITECTURE_Second_Audit_Response.md  CODING_AGENDA_Audit_Report.md  CODING_AGENDA_Audit_Response.md  CODING_AGENDA_Fifth_Round_Audit_Report.md  CODING_AGENDA_Fifth_Round_Audit_Response.md  CODING_AGENDA_Fourth_Round_Audit_Report.md  CODING_AGENDA_Fourth_Round_Audit_Response.md  CODING_AGENDA_Second_Round_Audit_Report.md  CODING_AGENDA_Second_Round_Audit_Response.md  CODING_AGENDA_Third_Round_Audit_Report.md  CODING_AGENDA_Third_Round_Audit_Response.md
catalogues/: enzyme_buffer_compat.yaml  enzymes.yaml  export_profiles.yaml  hosts.yaml  institutional_policy.yaml  markers.yaml  parts.yaml  risk_advisories.yaml  screening_trust_policy.yaml
docs/: index.md  module_manifest.yaml  platform_caveats.md  port_manifest.yaml  rendering_determinism.md  task_manifest.yaml  traceability_index.md
fonts/: LICENSE-NOTO.md
schemas/: enzyme_buffer_compat.schema.json  enzymes.schema.json  export_profiles.schema.json  hosts.schema.json  institutional_policy.schema.json  markers.schema.json  parts.schema.json  plugin_manifests.schema.json  risk_advisories.schema.json  rules_WR.schema.json  screening_trust_policy.schema.json  sop_templates.schema.json  vendor_profile.schema.json
tests/: __init__.py  conftest_platform.py  test_bootstrap.py  test_t202_scaffold.py  test_t203_module_manifest.py
tools/: __init__.py  agenda_consistency_check.py  audit_key_verifier.py  decision_record_verifier.py  initial_task_brief_generator.py  port_manifest_generator.py  profile_signature_verifier.py  sop_template_signature_verifier.py  (+2 more)
(+1302 files in other folders)
