[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "cloning-expression-vector-design"
version = "0.1.0"
description = "Local-first cloning and expression vector design platform."
readme = "README.md"
requires-python = ">=3.11.15,<3.12"
license = "Apache-2.0"
authors = [
  { name = "Cloning Expression Vector Design Contributors" },
]
dependencies = [
  "cryptography>=44.0,<47",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
io = [
  "biopython>=1.84,<2",
  "sbol3>=1.2,<2",
  "snapgene-reader>=0.1,<0.2",
]
biology-vienna = [
  "ViennaRNA>=2.6,<2.7",
]
biology-spliceai = [
  "httpx>=0.28,<1",
]
biology-signalp = [
  "httpx>=0.28,<1",
]
primer = [
  "primer3-py>=2.1,<3",
]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "websockets>=14,<16",
]
cli = [
  "rich>=13.9,<15",
  "typer>=0.15,<1",
]
pdf = [
  "markdown-it-py>=3,<5",
  "weasyprint>=63,<67",
]
llm-local = [
  "ollama>=0.4,<1",
]
llm-openai = [
  "openai>=1.55,<3",
]
llm-anthropic = [
  "anthropic>=0.42,<1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.123,<7",
  "import-linter>=2.1,<3",
  "mkdocs-material>=9.5,<10",
  "mypy>=1.13,<2",
  "pre-commit>=4.0,<5",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<8",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/adapter",
  "src/app",
  "src/cev_design",
  "src/domain",
  "src/engine",
  "src/interface",
]

[tool.uv]
required-version = ">=0.11.14,<0.12"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "audit report",
  "fonts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tools", "tests"]
exclude = [
  "^audit report/",
]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: long-running checks excluded from pull-request smoke runs",
  "requires_active_onedrive_sync: local-only smoke tests requiring an actively syncing OneDrive path",
]
